<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.rizqitsani.githubuser.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/userDetailFragment"
        android:name="com.rizqitsani.githubuser.ui.userdetail.UserDetailFragment"
        tools:layout="@layout/fragment_user_detail">
        <argument
            android:name="user"
            app:argType="com.rizqitsani.githubuser.domain.models.User" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.rizqitsani.githubuser.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.rizqitsani.githubuser.ui.favorite.FavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
    </fragment>
</navigation>